<resources>
    <string name="app_name">MeetTheCT</string>
    <string name="app_title">Meet DCT</string>
    <string name="lorem_ipsum">TEXTTEXTTEXT</string>
    <string name="title_main_screen">Let\'s travel the world!</string>
    <string name="sub_title_main_screen">Feeling adventures?</string>
    <string name="sub_title2_main_screen">Pack your bags and start travel:</string>
    <string name="OPEN_WEATHER_MAP_API_KEY">adbf2fe31977086e33809ca77096d296</string>



    <!-- General Fragment -->
    <string name="general_tab_text">General</string>
    <string name="speak_tab_text">Speak</string>
    <string name="eat_tab_text">Eat</string>
    <string name="see_tab_text">See</string>
    <string name="move_tab_text">Move</string>

    <string name="weather">Weather</string>
    <string name="currency">Money:</string>
    <string name="language">Speak:</string>
    <string name="electricity">Quick! Charger:</string>
    <string name="celzius_sign">℃</string>
    <string name="weather_hot">HOT!</string>
    <string name="weather_warm">WARM!</string>
    <string name="weather_cold">COLD!</string>
    <string name="restaurant_fragment_feeling_hungry">Feeling Hungry?</string>
    <string name="restaurant_fragment_best_food_in_your_area">Best food in your area</string>
    <string name="restaurant_go_there">Go there</string>
    <!-- General Fragment -->

    <array name="autosize_text_sizes">
        <item>10sp</item>
        <item>12sp</item>
        <item>20sp</item>
        <item>40sp</item>
        <item>100sp</item>
    </array>

</resources>
