<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/meet_dct" />
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text="@string/title_main_screen"
                android:textSize="27sp" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/search_auto_complete"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginStart="50dp"
                        android:background="@android:color/transparent" />


                    <ImageButton
                        android:id="@+id/search_button"
                        android:layout_width="17dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="19dp"
                        android:layout_marginTop="12.5dp"
                        android:background="@color/windowBackground"
                        android:src="@drawable/ic_city_main_search" />

                    <ImageButton
                        android:id="@+id/mic_button"
                        android:layout_width="17dp"
                        android:layout_height="22dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="12dp"
                        android:background="@color/windowBackground"
                        android:src="@drawable/ic_city_main_mic" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:background="@color/darkGray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/sub_title_main_screen"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/sub_title2_main_screen"
                android:textSize="18sp" />

        </LinearLayout>


        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingEnd="@dimen/card_padding"
            android:paddingStart="@dimen/card_padding" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>